# kasca-esque

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PROTOCOL.md  README.md  SPEC.md  fly.toml  gemini-finetune-tutorial.md  package-lock.json  package.json  server.ts  vite.config.ts
.claude/: settings.local.json
finetune/: IMPL_DETAILS.md  SPEC.md  __init__.py  audio_utils.py  checkpoints.py  config.py  features.py  inference.py  kasca-esque.ipynb  manifests.py  metrics.py  modal-function-image.py  modal_app.py  pyproject.toml  spec.md  sync_io.py  test_notebook.py  tokenizer_utils.py  training.py  whisper-eventcode-plan.ipynb  whisper-finetune.ipynb
finetune/.ipynb_checkpoints/: whisper_keyboard_finetune-checkpoint.ipynb
finetune/artifacts/keyboard_processor/: keyboard_vocab.json  preprocessor_config.json  special_tokens_map.json  tokenizer_config.json
lib/websocket/: types.ts  (+1 more)
recordings/: corrupted-recording_20251108_135705_DELETED.json  corrupted-recording_20251108_135705_DELETED.webm  old_qt_1746047498719_free_form.webm  qt_1746047498719_email_1.json  qt_1746047498719_email_1.webm  qt_1746047498719_free_form.json  qt_1746895943943_email_1.json  qt_1746895943943_email_1.webm  qt_1746895943943_free_form.json  qt_1746895943943_free_form.webm  qt_1748184742062_email_1.json  qt_1748184742062_email_1.webm  qt_1748184742062_free_form.json  qt_1748184742062_free_form.webm  qt_1749404117992_email_1.json  qt_1749404117992_email_1.webm  qt_1749404117992_free_form.json  qt_1749404117992_free_form.webm  qt_1749405175802_email_1.json  qt_1749405175802_email_1.webm  (+126 more)
(+32 files in other folders)
